--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "expo": "~52.0.20",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.14",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "expo-router": "~4.0.14",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "expo-linking": "~7.0.3",
-    "expo-constants": "~17.0.3",
-    "react-native-gesture-handler": "~2.20.2"
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.3.3"
   },
   "private": true
