--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "expo": "~52.0.20",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
@@ -19,8 +20,9 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "@expo/vector-icons": "^14.0.2",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "zustand": "^5.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
