--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "zustand": "^5.0.2"
+    "react-native-tab-view": "^4.0.5",
+    "zustand": "^5.0.2",
+    "react-native-pager-view": "6.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
