--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
     "expo": "~52.0.20",
+    "expo-build-properties": "~0.13.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.8",
+    "expo-dev-launcher": "^5.0.21",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.14",
     "expo-status-bar": "~2.0.0",
@@ -27,9 +30,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.0.5",
-    "zustand": "^5.0.2",
-    "expo-dev-client": "~5.0.8",
-    "expo-build-properties": "~0.13.1"
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
